melior/src/dialect/llvm/snapshots/melior__dialect__llvm__arithmetic__tests__compile_sub.snap
---
source: melior/src/dialect/llvm/arithmetic.rs
expression: module.as_operation()
---
module {
  func.func @foo(%arg0: i64, %arg1: i64) -> i64 {
    %0 = llvm.sub %arg0, %arg1 : i64
    return %0 : i64
  }
}
